--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,11 @@ dependencies {
 
     // android widgets
     compile "com.android.support:design:${versions.supportLib}"
+    // RxJava
+    compile "io.reactivex:rxjava:${versions.rxjava}"
+    compile "io.reactivex:rxandroid:${versions.rxandroid}"
+    // RxPermissions
+    compile 'com.tbruyelle.rxpermissions:rxpermissions:0.7.0@aar'
 
     // A memory leak detection library
     debugCompile "com.squareup.leakcanary:leakcanary-android:${versions.leakcanaryLib}"
