- update library resources, added prefix to not overlap application resources

--- a/filemanager/src/main/res/raw/mime_types.properties
+++ b/filemanager/src/main/res/raw/mime_types.properties
@@ -1,3 +1,7 @@
+# suppress inspection "UnusedProperty" for whole file
+# http://www.flaticon.com/icon-packs/file-format
+# http://file000.flaticon.com/packs/110942-file-formats-icons.zip
+
 # Binary
 a     = BINARY   | application/octet-stream           | fso_type_binary_drawable
 bin   = BINARY   | application/octet-stream           | fso_type_binary_drawable
