--- a/filemanager/build.gradle
+++ b/filemanager/build.gradle
@@ -25,6 +25,10 @@ android {
         }
     }
 
+    dataBinding {
+        enabled = true
+    }
+
     defaultConfig {
         vectorDrawables.useSupportLibrary = true
     }
