--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -8,6 +8,8 @@ ext {
     verCode = 1
     verName = "0.0.1"
 
-    supportLibVer = "25.0.0"
-    mvpcrxLibVer = "0.0.6"
+    supportLibVer    = "25.0.0"
+    mvpcrxLibVer     = "0.0.6"
+    autoValueLibVer  = "1.3"
+    leakcanaryLibVer = "1.5"
 }
