--- a/filemanager/build.gradle
+++ b/filemanager/build.gradle
@@ -45,6 +45,10 @@ android {
 }
 
 dependencies {
+
+    // android widgets
+    compile "com.android.support:design:$supportLibVer"
+
     // android framework
     compile "com.android.support:recyclerview-v7:$supportLibVer"
 
@@ -55,5 +59,3 @@ dependencies {
     provided "com.google.auto.value:auto-value:$autoValueLibVer"
     apt      "com.google.auto.value:auto-value:$autoValueLibVer"
 }
-
-// TODO - for bread crumbs - https://developer.android.com/samples/SlidingTabsBasic/src/com.example.android.common/view/SlidingTabLayout.html
