--- a/bintray.gradle
+++ b/bintray.gradle
@@ -6,35 +6,27 @@ version = verName // Change this to match your version number
 
 // BinTray staff
 
-android.libraryVariants.all { variant ->
-    def javadocTask = task("generate${variant.name.capitalize()}Javadoc", type: Javadoc) {
-        description "Generates Javadoc for $variant.name."
-        source = variant.javaCompile.source
-        ext.androidJar = project.files(android.getBootClasspath().join(File.pathSeparator))
-        classpath = files(variant.javaCompile.classpath.files) + files(ext.androidJar)
-        exclude '**/BuildConfig.java'
-        exclude '**/R.java'
-    }
+task generateSourcesJar(type: Jar) {
+    from android.sourceSets.main.java.srcDirs
+    classifier 'sources'
+}
 
-    javadocTask.dependsOn variant.javaCompile
+task generateJavadocs(type: Javadoc) {
+    failOnError false
+    source = android.sourceSets.main.java.srcDirs
+    classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
+}
 
-    def jarJavadocTask = task("jar${variant.name.capitalize()}Javadoc", type: Jar) {
-        description "Generate Javadoc Jar for $variant.name"
-        classifier = 'javadoc'
-        from javadocTask.destinationDir
-    }
+task generateJavadocsJar(type: Jar) {
+    from generateJavadocs.destinationDir
+    classifier 'javadoc'
+}
 
-    jarJavadocTask.dependsOn javadocTask
-    artifacts.add('archives', jarJavadocTask)
+generateJavadocsJar.dependsOn generateJavadocs
 
-    def jarSourceTask = task("jar${variant.name.capitalize()}Sources", type: Jar) {
-        description "Generates Java Sources for $variant.name."
-        classifier = 'sources'
-        from variant.javaCompile.source
-    }
-
-    jarSourceTask.dependsOn variant.javaCompile
-    artifacts.add('archives', jarSourceTask)
+artifacts {
+    archives generateJavadocsJar
+    archives generateSourcesJar
 }
 
 bintray {
