--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -5,8 +5,8 @@ ext {
     minSdkVer    = 14
     targetSdkVer = 25
 
-    verCode = 3
-    verName = "0.0.3"
+    verCode = 4
+    verName = "0.0.4"
 
     supportLibVer    = "25.0.0"
     mvpcrxLibVer     = "0.0.8"
@@ -14,5 +14,5 @@ ext {
     leakcanaryLibVer = "1.5"
 
     libraryName      = 'FileManager'
-    libraryDesc      = 'File manager fragment'
+    libraryDesc      = 'File manager fragments'
 }
