--- a/filemanager/src/main/AndroidManifest.xml
+++ b/filemanager/src/main/AndroidManifest.xml
@@ -1,1 +1,20 @@
-<manifest package="corp.wmsoft.android.lib.filemanager"/>
+<manifest
+    package="corp.wmsoft.android.lib.filemanager"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
+    <application
+        android:allowBackup="true"
+        android:supportsRtl="true">
+
+        <activity
+            android:name=".ui.FileManagerActivity"
+            android:label="@string/wm_fm_app_name"
+            android:theme="@style/AppTheme.Dialog.NoActionBar.NoTitle"
+            android:excludeFromRecents="true"/>
+
+    </application>
+
+</manifest>
